@@ -334,10 +334,16 @@ class LMSNodeManager extends LMSManager implements LMSNodeManagerInterface
         if ($nodelist = $this->db->GetAll('SELECT n.id AS id, n.ipaddr, inet_ntoa(n.ipaddr) AS ip, ipaddr_pub,
 				inet_ntoa(n.ipaddr_pub) AS ip_pub, n.mac, n.name, n.ownerid, n.access, n.warning,
 				n.netdev, n.lastonline, n.info, '
-                . $this->db->Concat('c.lastname', "' '", 'c.name') . ' AS owner, net.name AS netname, n.location
+				. $this->db->Concat('c.lastname', "' '", 'c.name') . ' AS owner, net.name AS netname, n.location,
+				lb.name AS borough_name, lb.type AS borough_type,
+				ld.name AS district_name, ls.name AS state_name
 				FROM vnodes n
 				JOIN customersview c ON (n.ownerid = c.id)
-				JOIN networks net ON net.id = n.netid '
+				JOIN networks net ON net.id = n.netid 
+				LEFT JOIN location_cities lc ON lc.id = n.location_city
+				LEFT JOIN location_boroughs lb ON lb.id = lc.boroughid
+				LEFT JOIN location_districts ld ON ld.id = lb.districtid
+				LEFT JOIN location_states ls ON ls.id = ld.stateid '
                 . ($customergroup ? 'JOIN customerassignments ON (customerid = c.id) ' : '')
                 . ($nodegroup ? 'JOIN nodegroupassignments ON (nodeid = n.id) ' : '')
                 . ' WHERE 1=1 '
