@@ -41,7 +41,8 @@
 	<TR class="highlight {cycle}"  >
 		<TD onClick="return self.location.href='?m=netdevinfo&id={$netdevlist[netdevlist].id}';" VALIGN="TOP">
 			<IMG src="img/netdev.gif" ALT=""> <a name="{$netdevlist[netdevlist].id}"><B>{$netdevlist[netdevlist].name}</B></A><BR>
-			<IMG src="img/producer.gif" ALT=""> {$netdevlist[netdevlist].producer} {if $netdevlist[netdevlist].model}/ {$netdevlist[netdevlist].model}{/if}{if $netdevlist[netdevlist].location} / {$netdevlist[netdevlist].location}{/if}
+			<IMG src="img/producer.gif" ALT=""> {$netdevlist[netdevlist].producer} {if $netdevlist[netdevlist].model}/ {$netdevlist[netdevlist].model}{/if}
+			{if $netdevlist[netdevlist].location} / {$netdevlist[netdevlist].location} {if $netdevlist[netdevlist].borough_name} ({$netdevlist[netdevlist].state_name} / {$netdevlist[netdevlist].district_name} / {$_BOROUGHTYPES[$netdevlist[netdevlist].borough_type]} {$netdevlist[netdevlist].borough_name}){/if}{/if}
 		</TD>
 		<TD onClick="return self.location.href='?m=netdevinfo&id={$netdevlist[netdevlist].id}';" class="nobr valign-top">
 			{if $netdevlist[netdevlist].netnode}<a href="?m=netnodeinfo&id={$netdevlist[netdevlist].netnodeid}">{$netdevlist[netdevlist].netnode}</a>{/if}
