@@ -46,6 +46,7 @@ version ?.??.?? (????-??-??):
   - network node list can be filtered by nodes without investment project [chilan]
   - added network node column in network device list [chilan]
   - show info about state, district and borough in netnode, netdev and node info boxes [chilan]
+  - full location info in netnode, netdev and node lists [chilan]
 
 version 1.11.15 (2014-05-15):
 
